--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="NameCalculator">
   <head>
     <meta charset="utf-8">
-    <title>Hello Coursera</title>
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
+    <title>Name Calculator</title>
   </head>
   <body>
-    <h1>Hello Coursera Students</h1>
+    <h1>Name Calculator</h1>
+    <div ng-controller="NameCalculatorController">
+      Your name: <input type="text" ng-model="name" ng-keyup="displayNumeric();">
+      <div>
+        Total Numeric value of person's name is: {{totalValue}}
+      </div>
+    </div>
   </body>
 </html>
